--- a/Exercises Codes.html
+++ b/Exercises Codes.html
@@ -88,10 +88,10 @@
   <script>
 
     const activities = [
-      "exercisesBuildInFunction.php",
-      "exercisesControlStructure.php",
-      "exercisesFunctions.php",
-      "phpExercisesdatatypes.php"
+      "exercisesBuildInFunction.txt",
+      "exercisesControlStructure.txt",
+      "exercisesFunctions.txt",
+      "phpExercisesdatatypes.txt"
     ];
 
     let currentIndex = 0;
